infra/k8s/comments-depl.yaml
# Deployment manages pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # for the deployment to know which pods to manage
  selector:
    matchLabels:
      app: comments
  # to label the pods that the deployment manages
  template:
    metadata:
      labels:
        app: comments
    # spec for the actual containers in the pods
    spec:
      containers:
        - name: comments
          image: rocky1638/microservicesblog-comments
---
# ClusterIP services provides access for other nodes.
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP # this is default
  # find these pods in the cluster!
  # (designated in the posts deployment)
  # kind of similar to css
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # the port of the service, not the pod!
      targetPort: 4001 # port that is on the pod/application!
