infra/k8s/moderation-depl.yaml
# Deployment manages pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # for the deployment to know which pods to manage
  selector:
    matchLabels:
      app: moderation
  # to label the pods that the deployment manages
  template:
    metadata:
      labels:
        app: moderation
    # spec for the actual containers in the pods
    spec:
      containers:
        - name: moderation
          image: rocky1638/microservicesblog-moderation
---
# ClusterIP services provides access for other nodes.
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # this is default
  # find these pods in the cluster!
  # (designated in the posts deployment)
  # kind of similar to css
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # the port of the service, not the pod!
      targetPort: 4003 # port that is on the pod/application!
