infra/k8s/posts-depl.yaml
# Deployment manages pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  # for the deployment to know which pods to manage
  selector:
    matchLabels:
      app: posts
  # to label the pods that the deployment manages
  template:
    metadata:
      labels:
        app: posts
    # spec for the actual containers in the pods
    spec:
      containers:
        - name: posts
          image: rocky1638/microservicesblog-posts
---
# ClusterIP services provides access for other nodes.
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP # this is default
  # find these pods in the cluster!
  # (designated in the posts deployment)
  # kind of similar to css
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # the port of the service, not the pod!
      targetPort: 4000 # port that is on the pod/application!
