infra/k8s/query-depl.yaml
# Deployment manages pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # for the deployment to know which pods to manage
  selector:
    matchLabels:
      app: query
  # to label the pods that the deployment manages
  template:
    metadata:
      labels:
        app: query
    # spec for the actual containers in the pods
    spec:
      containers:
        - name: query
          image: rocky1638/microservicesblog-query
---
# ClusterIP services provides access for other nodes.
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP # this is default
  # find these pods in the cluster!
  # (designated in the posts deployment)
  # kind of similar to css
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # the port of the service, not the pod!
      targetPort: 4002 # port that is on the pod/application!
